--- a/assets/less/pages/index.less
+++ b/assets/less/pages/index.less
@@ -11,34 +11,8 @@
   background-color: fade(@overlay,85%);
   padding: 60px 0;
   
-  ul {
-    &:extend(.ul-unstyled);
+  .horizontal-nav {
     float: right;
-    
-    li {
-      display: inline-block;
-      margin-left: 15px;
-      
-      a {
-        .transition();
-        display: block;
-        border: 2px solid transparent;
-        color: #fff;
-        font-weight: 600;
-        text-transform: uppercase;
-        text-decoration: none;
-        padding: 10px 17px;
-        line-height: 1;
-        
-        &.active {
-          border-color: @accent;
-          color:@accent;
-        }
-        &:hover {
-          color:@accent;
-        }
-      }
-    }//li
   }
 }//site-nav
 
@@ -74,6 +48,10 @@
     background-color: #fff;
     margin-top: 10px;
   }
+  
+  &.black-line:after {
+    background-color: @font;
+  }
 }//stn-heading
 
 .stn-services {
@@ -95,3 +73,88 @@
   }
 }//.stn-service
 
+//section portfolio
+
+.stn-portfolio {
+  &:extend(.stn-padding);
+  
+  .horizontal-nav {
+    float: right;
+  }
+  
+  .stn-heading {
+    margin-bottom: 80px;
+    margin-left: -15px;
+  }
+}
+
+.thumbs-row {
+  
+  min-height: 270px + 270px + 30px;
+  [class^="col-"] {
+    margin-bottom: 30px;
+  }
+  
+  a {
+    position: relative;
+    display: block;
+    height: 270px;
+    opacity: .8;
+    color:#fff;
+    font-size: 72px;
+    text-align: center;
+    font-weight: 200;
+    background-color: pink;
+    
+    &:after {
+      position: absolute;
+      content: '+';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #454e56;
+      background-color: fade(#454e56,80%);
+      line-height: 1;
+      opacity: 0;
+      transition:all 0.3s ease-in-out;
+    }
+    
+    &:hover:after {
+      opacity: 1;
+      line-height: 270 / 72;
+    }
+  }
+}//thumbs-row
+
+.thumb-1 {
+  .bg-img('thumb-1.jpg');
+}
+
+.thumb-2 {
+  .bg-img('thumb-2.jpg');
+}
+
+.thumb-3 {
+  .bg-img('thumb-3.jpg');
+}
+
+.thumb-4 {
+  .bg-img('thumb-4.jpg');
+}
+
+.thumb-5 {
+  .bg-img('thumb-5.jpg');
+}
+
+.thumb-6 {
+  .bg-img('thumb-6.jpg');
+}
+
+.thumb-7 {
+  .bg-img('thumb-7.jpg');
+}
+
+.thumb-8 {
+  .bg-img('thumb-8.jpg');
+}
