--- a/assets/less/components/base.less
+++ b/assets/less/components/base.less
@@ -2,5 +2,10 @@
 body {
   font-family: 'Segoe', Arial, sans-serif;
   font-size: 14px;
-  line-height: 24/14;
+  line-height: 24/14;  
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 25px;
 }
