--- a/assets/less/pages/index.less
+++ b/assets/less/pages/index.less
@@ -42,6 +42,7 @@
   line-height: 1;
   
   &:after {
+    display: table;
     content: '';
     width: 45px;
     height: 2px;
@@ -84,7 +85,6 @@
   
   .stn-heading {
     margin-bottom: 80px;
-    margin-left: -15px;
   }
 }
 
