--- a/assets/less/components/icons.less
+++ b/assets/less/components/icons.less
@@ -48,16 +48,19 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-twitter:before {
-    content: "\f099";
-}
-.icon-google-plus:before {
-    content: "\f0d5";
-}
 .icon-coffee:before {
-    content: "\f0f4";
+    content: "\e900";
+}
+.icon-twitter:before {
+    content: "\e901";
 }
 .icon-dribbble:before {
-    content: "\f17d";
+    content: "\e902";
+}
+.icon-google:before {
+    content: "\e903";
+}
+.icon-quote:before {
+    content: "\e904";
 }
 
