--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1169,6 +1169,53 @@ hr {
 .horizontal-nav.black-font a {
   color: #515f67;
 }
+.main-nav-trigger {
+  display: none;
+  font-size: 45px;
+  color: #fff;
+  float: right;
+  line-height: 1;
+  cursor: pointer;
+  -webkit-transition: color 0.3s ease-in-out;
+          transition: color 0.3s ease-in-out;
+  font-family: Arial Unicode MS, Lucida Sans Unicode, sans-serif;
+}
+.main-nav-trigger:hover {
+  color: #4bcaff;
+}
+@media (max-width: 992px) {
+  .main-nav-trigger {
+    display: block;
+  }
+  .main-logo {
+    float: left;
+  }
+  .site-nav {
+    position: relative;
+  }
+  .site-nav .horizontal-nav {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #48525a;
+  }
+  .site-nav .horizontal-nav li {
+    width: 100%;
+    display: block;
+    margin-left: 0;
+    text-align: center;
+    border-bottom: 1px solid #535f68;
+  }
+  .site-nav .horizontal-nav a {
+    display: inline-block;
+    padding: 20px 30px;
+  }
+  .site-nav .horizontal-nav a.active {
+    border-color: transparent;
+  }
+}
 .videoWrapper {
   position: relative;
   padding-bottom: 56.25%;
@@ -1271,6 +1318,7 @@ p {
   text-align: center;
 }
 .hero-heading span {
+  background-color: #48525a;
   background-color: rgba(72, 82, 90, 0.85);
   padding: 0 20px;
 }
@@ -1333,7 +1381,12 @@ p {
   font-weight: 200;
   background-color: pink;
 }
+.thumbs-row a:hover {
+  text-decoration: none;
+}
 .thumbs-row a:after {
+  display: block;
+  text-align: center;
   position: absolute;
   content: '+';
   top: 0;
