--- a/assets/less/pages/index.less
+++ b/assets/less/pages/index.less
@@ -25,6 +25,7 @@
   text-align: center;
   
   span {
+    background-color: @overlay;
     background-color: fade(@overlay, 85%);
     padding: 0 20px;
   }
@@ -105,8 +106,13 @@
     text-align: center;
     font-weight: 200;
     background-color: pink;
+    &:hover {
+      text-decoration: none;
+    }
     
     &:after {
+      display: block;
+      text-align: center;
       position: absolute;
       content: '+';
       top: 0;
